--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,3 +94,56 @@ img {
     }
   }
 }
+
+// Home Sections
+#home {
+  // Home Section A
+  &-a {
+    .specials {
+      margin-top: 3rem;
+      display: grid;
+      grid-gap: 1rem;
+      // 4 even columns
+      grid-template-columns: repeat(4, 1fr);
+
+      .fas {
+        color: $main-color;
+        padding-bottom: 0.4rem;
+      }
+    }
+  }
+
+  // Home Section B
+  &-b {
+    .stats {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+
+      li {
+        line-height: 2;
+
+        &.stats-title {
+          font-size: 1.5rem;
+        }
+
+        &.stats-number {
+          font-size: 2rem;
+          font-weight: bold;
+        }
+      }
+
+    div {
+      padding: 3rem 0;
+
+      // :nth-child() CSS pseudo-class matches elements based on their position in a group of siblings
+      &:nth-child(odd) {
+        background-color: $light-color;
+      }
+
+      &:nth-child(even) {
+        background-color: $medium-color;
+      }
+    }
+    }
+  }
+}
