--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -50,7 +50,7 @@ input[class^='btn-']:hover {
   background-color: $main-color;
 }
 
-// to style announce banner
+// to style announce 
 .lead {
   font-size: 1.3rem;
   margin-bottom: 2rem;
@@ -91,4 +91,23 @@ input[class^='btn-']:hover {
   &-4 {
     margin: 4rem 0;
   }
+}
+
+// section title
+.section-title {
+  font-size: 2rem;
+  display: block;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
+// underline styling
+.bottom-line {
+  height: 2px;
+  width: 3rem;
+  background-color: $main-color;
+  display: block;
+  margin: 0 auto 1rem;
 }
